--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,21 +1,13 @@
 
-# Base Image
 FROM python:3.9-slim
 
-# Working Directory
 WORKDIR /app
 
-# Copy Requirements
 COPY requirements.txt .
-
-# Install Dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy Source Code
 COPY . .
 
-# Expose Port
 EXPOSE 8000
 
-# Run API
-CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
